# c3poh_for_claudecode

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
.claude-plugin/: plugin.json
c3poh/: __init__.py  __main__.py  config.py  logger.py  notify_server.py  state.py  telegram_bot.py
commands/: c3poh-start.md  c3poh-status.md
docs/: TELEGRAM_SETUP.md
tests/: test_bot.py  test_config.py  test_notify_server.py
