[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c3poh-for-claudecode"
version = "0.1.0"
description = "Telegram bridge for Claude Code. DM your agent, get answers back. Because Claude Code needed a comms droid."
readme = "README.md"
license = {text = "GNU GPLv3"}
authors = [
  {name = "Andy Rosic", email = "andy@uninvited.llc"}
]
keywords = ["claude", "claude-code", "ai", "telegram", "bot", "messaging", "automation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = []  # zero runtime deps - stdlib only

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]

[project.scripts]
c3poh = "c3poh.__main__:main"

[project.urls]
Homepage = "https://github.com/andyuninvited/c3poh_for_claudecode"
Repository = "https://github.com/andyuninvited/c3poh_for_claudecode"
Issues = "https://github.com/andyuninvited/c3poh_for_claudecode/issues"

[tool.setuptools.packages.find]
include = ["c3poh*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
